@@ -1,4 +1,4 @@
-# Parsing data for forums.boxee.tv
+# Parsing data for www.xbmc4xbox.org
 #import:forum.xbmc.org
 # The URLs
 url:base=http://www.xbmc4xbox.org/forum/
