@@ -73,6 +73,7 @@
     <string id="30161">Error getting threads.</string>
     <string id="30162">Last Post By:</string>
     <string id="30163">Error filling threads list.</string>
+    <string id="30164">FORUM</string>
     
     <string id="30170">Forums</string>
     <string id="30171">Error getting forums.</string>
