@@ -261,6 +261,14 @@
             <texture>forum-browser-sticky.png</texture>
             <visible>StringCompare(ListItem.Genre,sticky)</visible>
           </control>
+          <control type="image">
+            <posx>187</posx>
+            <posy>2</posy>
+            <width>28</width>
+            <height>34</height>
+            <texture>forum-browser-thread.png</texture>
+            <visible>StringCompare(ListItem.Genre,is_forum)</visible>
+          </control>
           <control type="label">
             <posx>10</posx>
             <posy>0</posy>
@@ -317,6 +325,14 @@
             <height>34</height>
             <texture>forum-browser-sticky.png</texture>
             <visible>StringCompare(ListItem.Genre,sticky)</visible>
+          </control>
+          <control type="image">
+            <posx>187</posx>
+            <posy>2</posy>
+            <width>28</width>
+            <height>34</height>
+            <texture>forum-browser-thread.png</texture>
+            <visible>StringCompare(ListItem.Genre,is_forum)</visible>
           </control>
           <control type="label">
             <posx>10</posx>
